K3s/Certificate_with_k3s+nginx/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: selfsigned-issuer
spec:
  rules:
  - host: dkrp3.xyz
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
  tls:
  - hosts: [dkrp3.xyz]
    secretName: nginx-ingress-cert
